<resources>
    <string name="app_name">Queue System Sprint 3</string>
    <string name="title_home">Queue</string>
    <string name="title_dashboard">TA</string>
    <string name="title_notifications">Calendar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">channel</string>
    <string name="channel_description">Channel for queue notification</string>
    <string name="queueEmpty">\The course queue is empty.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>

</resources>